scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/AssrtCoreTest34.scr
module bad.extensions.assrtcore.safety.assrtprog.AssrtCoreTest34;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B;
	choice at B
	{
		2() from B to A; @"(x<5)"
	}
	or
	{
		3() from B to A; @"(x>5)"  // Testing assert-prog check rhs disjunction
	}
}
//*/
